# SDL-imgui-template

./: .gitmodules  CMakeLists.txt  README.md
assets/: among-us-3D-model-cgian.mtl
client/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake
client/src/: app.cpp  app.hpp  client.cpp  client.hpp  client_thread.cpp  client_thread.hpp  data.hpp  interface.cpp  interface.hpp  main.cpp
client/src/engine/: engine.cpp  engine.h  engine.hpp  sr_core.cpp  sr_core.hpp  sr_impl.hpp
client/src/logger/: logger.cpp  logger.hpp
cmake/: FindSDL2.cmake
server/: CMakeLists.txt
server/src/: app.cpp  app.hpp  client.cpp  client.hpp  data.hpp  main.cpp  server.cpp  server.hpp  threaded_server.cpp  threaded_server.hpp  window.cpp  window.hpp
src/: engine.h  main.cpp
src/engine/: sr_core.cpp  sr_core.hpp
